# todo-list

backend/: .env  Cargo.toml
backend/src/: app_state.rs  main.rs  models.rs  repository.rs  repository_postgres.rs
backend/src/routes/: mod.rs  todo.rs
frontend/todo-list/: package-lock.json  package.json
frontend/todo-list/src/: App.tsx
frontend/todo-list/src/components/: TodoForm.tsx  TodoList.tsx
frontend/todo-list/src/services/: api.ts
frontend/todo-list/todo-list-app/: README.md  package.json
frontend/todo-list/todo-list-app/public/: index.html
frontend/todo-list/todo-list-app/src/: App.tsx  index.tsx
frontend/todo-list/todo-list-app/src/components/: TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/todo-list/todo-list-app/src/services/: api.ts
frontend/todo-list/todo-list-app/src/styles/: App.css
infra/: docker-compose.yml
