[package]
name = "todo-list"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15"
anyhow = "1.0.98" # để load DATABASE_URL từ file .env
tower-http = { version = "0.6.2", features = ["cors"] }
